Bug 930444 - [MediaEncoder] Add Profile Label in Encoding path. r=roc